gcc/testsuite/rust/rustc/ui/old-suffixes-are-really-forbidden.rs
fn main() {
    let a = 1_is; // { dg-error "" "" { target *-*-* } }
    let b = 2_us; // { dg-error "" "" { target *-*-* } }
}

